--- a/numbers-waterfall.cabal
+++ b/numbers-waterfall.cabal
@@ -48,7 +48,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -threaded
 
 executable numbers-waterfall
     -- Import common warning flags.
